# AT-Linker

./: .gitignore  AT_Linker.sln  CMakeLists.txt  DefBuildIgnores.example.txt  LICENSE  README.md  build.cmd  gen_vs26.cmd  plan.md
.github/workflows/: windows.yml
AT_Linker/: AT_Linker.vcxproj
AT_Linker/src/: main.cpp
CoffParser/: CoffParser.vcxproj  CoffParser.vcxproj.filters
CoffParser/src/: CoffFile.h  CoffParser.cpp  CoffParser.h  ElfFile.h  ElfParser.cpp  ElfParser.h  ObjectParser.cpp  ObjectParser.h  ReferenceGen.cpp  ReferenceGen.h  Streams.cpp  Streams.h  stdafx.cpp  stdafx.h
include/defgen/: defgen.hpp
src/defgen/: coff_image.cpp  coff_image.hpp  coff_parser.cpp  coff_pe_constants.hpp  def_generator.cpp  elf_parser.cpp  elf_types.hpp  parsers.hpp
src/proxy/: main.cpp
